--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
           <div class="result">
             
           </div>
+          <div class="result_shuffle_strategy">
+            
+          </div>
          </div>
 
          <div class="col-md-2"></div>
