COMPLETE ALPHA_VER

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="row">
                <div class="col-md-4">
                  <label> Строки </label>
-                   <select class="rows" name="n">
+                   <select class="rows form-but" name="n">
                        <option selected value="2">2 строки</option>
                        <option value="3">3 строки</option>
                        <option value="4">4 строки</option>
@@ -40,7 +40,7 @@
                </div>
                 <div class="col-md-4">
                   <label> Столбцы </label>
-                   <select class="columns" name="m">
+                   <select class="columns form-but" name="m">
                        <option selected value="2">2 столбца</option>
                        <option value="3">3 столбца</option>
                        <option value="4">4 столбца</option>
@@ -48,8 +48,6 @@
                    </select>
                </div>
             </div>
-
-            <a class="build_matrix_button">Построить</a>
 
             <div class="row">
                <div calss="col-md-12">
@@ -61,7 +59,7 @@
                </div>
             </div>
 
-             <a class="shape_matrix_button">Сформировать массив</a>
+             <a class="shape_matrix_button">Найти решение</a>
 
           </form>
 
