add footer. Last change. Course project complete

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <![endif]-->
   </head>
   <body>
-  <div class="container"></div>
+  <div class="wraper container">
      <div class="row">
 
          <div class="col-md-2"></div>
@@ -73,7 +73,30 @@
 
          <div class="col-md-2"></div>
      </div>
+</div>
 
+<div class="container">
+  <footer class="footer row">
+    <div class="info2 col-md-4">
+      <p><span>e-mail:</span><a target="_blank" href="mailto:rus323232@gmail.com">rus323232@gmail.com</a></p>
+      <p><span>GitHub:</span><a target="_blank" href="https://github.com/rus323232/GameTheory.git">
+          <img class="github-logo" src="img/github_logo.png">
+      </a></p>
+    </div>
+    <div class="info1 col-md-4">
+      <p><span>Курсовая работа по предмету:</span> "ЭММ"</p>
+      <p><span>Выполнил:</span> Ураков Р. С.</p>
+      <p><span>Группа:</span> БИЗИ-13/1</p>
+      <p><span>Преподователь:</span> Козлова Л. А.</p>
+    </div>
+    <div class="info3 col-md-4">
+      <p><a target="_blank" href="http://www.ulsu.ru/1.html">
+          <img class="ulsu-logo" src="img/ulsu-logo.jpg">
+         </a>
+      </p>
+    </div>
+  </footer>
+</div>
 
 
 
